# proxy-wasm-signature-verifier

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
scripts/: test-vmod-wasm.sh
src/: canonical.rs  config.rs  crypto.rs  lib.rs
tests/: vmod_wasm_signature_verifier.vtc
